bayelvira/src/main/java/elvira/parser/DataBaseParse.java
/* Generated By:JavaCC: Do not edit this line. DataBaseParse.java */
package elvira.parser;

import java.util.Vector;
import java.util.Enumeration;
import java.util.Hashtable;
import java.io.*;
import elvira.Node;
import elvira.NodeList;
import elvira.potential.Potential;
import elvira.potential.PotentialTable;
import elvira.potential.PotentialTree;
import elvira.Relation;
import elvira.Link;
import elvira.LinkList;
import elvira.FiniteStates;
import elvira.Continuous;
import elvira.CaseList;
import elvira.CaseListMem;
import elvira.ContinuousCaseListMem;
import elvira.CaseListOutMem;
import elvira.Configuration;
import elvira.ContinuousConfiguration;



public class DataBaseParse implements DataBaseParseConstants {
 public String Type;
 public String Name;
 public String Title;
 public String Comment;
 public String Author;
 public String WhoChanged;
 public String WhenChanged;
 public String version;
 public boolean locked;
 public Hashtable networkPropertyList;
 public Vector Consistency;
 public NodeList Nodes;
 public Vector Relations;
 public FiniteStates DefaultFinite;
 Continuous DefaultContinuous;
 //MixedNode DefaultMixed;
 public Relation DefaultRelation;
 public int casesNumber;
 public int defaultnodetype;
 public boolean memory;
 public boolean statesdecl;





  public static void main(String args[]) throws ParseException
   ,IOException {
    FileInputStream f;

    f = new FileInputStream("ejemplo.dbc");

    DataBaseParse parser = new DataBaseParse(f);
    parser.initialize();

    parser.CompilationUnit();
    parser.Nodes.print();
    Relation relation = (Relation)parser.Relations.elementAt(0);
    CaseList cases = (CaseList)relation.getValues();
    cases.print();



  }

  public void initialize() {
    String DefaultStates[]= {"absent","present"};

   Name =  new String("");
   Title =  new String("");
   Comment =  new String("");
   Author =  new String("");
   WhoChanged =  new String("");
   WhenChanged =  new String("");
   version =  new String("1.0");
   casesNumber = 0;
   memory = false;
   Consistency = new Vector();
   Nodes = new NodeList();
   Relations = new Vector();
   DefaultFinite = new FiniteStates("Default",DefaultStates);
   DefaultContinuous = new Continuous();
   DefaultContinuous.setTitle("");
   DefaultContinuous.setComment("");
   DefaultRelation = new Relation();
   DefaultRelation.setKind(Relation.CONDITIONAL_PROB);
   DefaultFinite.setTitle("");
   DefaultFinite.setComment("");

//    parser.DefaultContinuous = new ContinuousNode();
//    parser.DefaultMixed = new MixedNode();
     defaultnodetype=1;
 }

  final public void CompilationUnit() throws ParseException {
    DataBaseDeclaration();
    jj_consume_token(56);
    jj_consume_token(0);
  }

  final public void DataBaseDeclaration() throws ParseException {
 Token T;
    databaseClass();
    if (jj_2_1(4)) {
      T = jj_consume_token(WORD);
    } else if (jj_2_2(4)) {
      T = jj_consume_token(STRING);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
 Name=(T.toString());
    jj_consume_token(57);
    databaseContent();
  }

  final public void databaseClass() throws ParseException {
    jj_consume_token(DATABASE);
                Type="database";
  }

  final public void databaseContent() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_3(4)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_4(4)) {
        Property();
      } else if (jj_2_5(4)) {
        DefaultDeclaration();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(58);
    }
    label_2:
    while (true) {
      if (jj_2_6(4)) {
        ;
      } else {
        break label_2;
      }
      ElementDeclaration();
    }
  }

  final public void DefaultDeclaration() throws ParseException {
 Node N;
    if (jj_2_7(4)) {
      jj_consume_token(DEFVALUE);
    } else if (jj_2_8(4)) {
      jj_consume_token(EVERY);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_13(4)) {
      jj_consume_token(NODE);
      jj_consume_token(NODETYPE);
      jj_consume_token(EQUAL);
      jj_consume_token(FINITE);
                                          defaultnodetype=1;
    } else if (jj_2_14(4)) {
      jj_consume_token(NODE);
      if (defaultnodetype==1) {

      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_9(4)) {
        NodeProperty(DefaultFinite);
      } else if (jj_2_10(4)) {
        FiniteProperty(DefaultFinite);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_15(4)) {
      jj_consume_token(NODE);
      jj_consume_token(OPEN_PAREN);
      jj_consume_token(FINITE);
      jj_consume_token(CLOSE_PAREN);
      if (jj_2_11(4)) {
        NodeProperty(DefaultFinite);
      } else if (jj_2_12(4)) {
        FiniteProperty(DefaultFinite);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_16(4)) {
      jj_consume_token(RELATION);
      RelationProperty(DefaultRelation);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Property() throws ParseException {
 Token T,NProp=null,VProp;
    if (jj_2_24(4)) {
      jj_consume_token(TITLE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                              Title=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_25(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                Comment=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_26(4)) {
      jj_consume_token(CONSISTENCY);
      jj_consume_token(EQUAL);
      jj_consume_token(OPEN_PAREN);
      jj_consume_token(CLOSE_PAREN);
    } else if (jj_2_27(4)) {
      jj_consume_token(CONSISTENCY);
      jj_consume_token(EQUAL);
      jj_consume_token(OPEN_PAREN);
      ListWords(Consistency);
      jj_consume_token(CLOSE_PAREN);
    } else if (jj_2_28(4)) {
      jj_consume_token(AUTHOR);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                 Author=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_29(4)) {
      jj_consume_token(WHOCHANGED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                     WhoChanged=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_30(4)) {
      jj_consume_token(WHENCHANGED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                      WhenChanged=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_31(4)) {
      jj_consume_token(LOCKED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(BOOLEAN);
         if (T.image.equals("true")){locked=true;}
         else {locked=false;}
    } else if (jj_2_32(4)) {
      jj_consume_token(VERSION);
      jj_consume_token(EQUAL);
      T = jj_consume_token(FLOAT);
                              version = T.image;
    } else if (jj_2_33(4)) {
      NProp = jj_consume_token(WORD);
      jj_consume_token(EQUAL);
      if (jj_2_22(4)) {
        if (jj_2_17(4)) {
          VProp = jj_consume_token(STRING);
        } else if (jj_2_18(4)) {
          VProp = jj_consume_token(STRINGDECIMAL);
      networkPropertyList.put(NProp.image,VProp.image);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_23(4)) {
        if (jj_2_19(4)) {
          VProp = jj_consume_token(BOOLEAN);
        } else if (jj_2_20(4)) {
          VProp = jj_consume_token(WORD);
        } else if (jj_2_21(4)) {
          VProp = jj_consume_token(DECIMAL_LITERAL);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      System.out.println("Warning: Encountered \"" +NProp.toString()+"="+VProp.toString()+"\" at line " + NProp.beginLine + ", column " + NProp.beginColumn  +". Ignoring it. These network property is not funtional yet\n");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_34(4)) {
      jj_consume_token(CASESNUMBER);
      jj_consume_token(EQUAL);
      T = jj_consume_token(DECIMAL_LITERAL);
      String temporal = new
           String(T.image.substring(0,T.image.length()));
           try{
              casesNumber = Integer.valueOf(temporal).intValue();
           }catch (NumberFormatException e){
              System.out.println(e);
           }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void NodeProperty(Node N) throws ParseException {
 Token T,NProp,VProp;
 Double D;
    if (jj_2_46(4)) {
      jj_consume_token(TITLE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                               N.setTitle(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_47(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                N.setComment(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_48(4)) {
      jj_consume_token(NODEKIND);
      jj_consume_token(EQUAL);
      if (jj_2_35(4)) {
        T = jj_consume_token(CHANCE);
      } else if (jj_2_36(4)) {
        T = jj_consume_token(DECISION);
      } else if (jj_2_37(4)) {
        T = jj_consume_token(UTILITY);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                 N.setKindOfNode(T.image);
    } else if (jj_2_49(4)) {
      jj_consume_token(POSX);
      jj_consume_token(EQUAL);
      if (jj_2_38(4)) {
        T = jj_consume_token(INTEGER);
      } else if (jj_2_39(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                       N.setPosX( Integer.valueOf(T.image).intValue() );
    } else if (jj_2_50(4)) {
      jj_consume_token(POSY);
      jj_consume_token(EQUAL);
      if (jj_2_40(4)) {
        T = jj_consume_token(INTEGER);
      } else if (jj_2_41(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                       N.setPosY( Integer.valueOf(T.image).intValue() );
    } else if (jj_2_51(4)) {
      jj_consume_token(RELEVANCE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(FLOAT);
                                N.setRelevance(Double.valueOf(T.image).doubleValue());
    } else if (jj_2_52(4)) {
      jj_consume_token(PURPOSE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                               N.setPurpose(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_53(4)) {
      NProp = jj_consume_token(WORD);
      jj_consume_token(EQUAL);
      if (jj_2_44(4)) {
        if (jj_2_42(4)) {
          VProp = jj_consume_token(STRING);
        } else if (jj_2_43(4)) {
          VProp = jj_consume_token(STRINGDECIMAL);
      N.putProperty(NProp.image,VProp.image);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_45(4)) {
        VProp = jj_consume_token(DECIMAL_LITERAL);
      System.out.println("Warning: Encountered \"" +NProp.toString()+"="+VProp.toString()+"\" at line " + NProp.beginLine + ", column " + NProp.beginColumn  + ". Ignoring it. Node properties with a int value are not funtional yet\n");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ElementDeclaration() throws ParseException {
    if (jj_2_54(4)) {
      NodeDeclaration();
    } else if (jj_2_55(4)) {
      RelationDeclaration();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void NodeDeclaration() throws ParseException {
 Token T;
    jj_consume_token(NODE);
    if (jj_2_56(4)) {
      T = jj_consume_token(WORD);
    } else if (jj_2_57(4)) {
      T = jj_consume_token(STRING);
    } else if (jj_2_58(4)) {
      T = jj_consume_token(PARAMETER_WORD);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_61(4)) {
      DefaultNodeDeclaration(T);
    } else if (jj_2_62(4)) {
      jj_consume_token(OPEN_PAREN);
      if (jj_2_59(4)) {
        FiniteDeclaration(T);
      } else if (jj_2_60(4)) {
        ContinuousDeclaration(T);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DefaultNodeDeclaration(Token T) throws ParseException {
    if (defaultnodetype==1) {

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    FiniteBody(T);
  }

  final public void FiniteDeclaration(Token T) throws ParseException {
    jj_consume_token(FINITE);
    jj_consume_token(CLOSE_PAREN);
    FiniteBody(T);
  }

  final public void ContinuousDeclaration(Token T) throws ParseException {
    jj_consume_token(CONTINUOUS);
    jj_consume_token(CLOSE_PAREN);
    ContinuousBody(T);
  }

  final public void FiniteBody(Token T) throws ParseException {
FiniteStates N;
N= (FiniteStates) DefaultFinite.copy();
N.setName(T.image);
    if (jj_2_63(4)) {
      jj_consume_token(57);
      FiniteNodeProperties(N);
      jj_consume_token(56);
    } else if (jj_2_64(4)) {
      jj_consume_token(58);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                                              Nodes.insertNode(N);
  }

  final public void ContinuousBody(Token T) throws ParseException {
Continuous N;
N= (Continuous) DefaultContinuous.copy();
N.setName(T.image);
    if (jj_2_65(4)) {
      jj_consume_token(57);
      ContinuousNodeProperties(N);
      jj_consume_token(56);
    } else if (jj_2_66(4)) {
      jj_consume_token(58);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                  Nodes.insertNode(N);
  }

  final public void FiniteNodeProperties(Node N) throws ParseException {
    label_3:
    while (true) {
      if (jj_2_67(4)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_68(4)) {
        NodeProperty(N);
      } else if (jj_2_69(4)) {
        FiniteProperty(N);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(58);
    }
  }
